--- a/data/cards/09603252.yaml
+++ b/data/cards/09603252.yaml
@@ -117,6 +117,6 @@ sets:
     rarities:
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 842649
