--- a/data/cards/09726840.yaml
+++ b/data/cards/09726840.yaml
@@ -88,6 +88,6 @@ sets:
     rarities:
     - Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 844092
