--- a/data/cards/33331231.yaml
+++ b/data/cards/33331231.yaml
@@ -100,6 +100,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 835308
