--- a/data/cards/36114945.yaml
+++ b/data/cards/36114945.yaml
@@ -101,6 +101,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 838899
