--- a/data/cards/99937011.yaml
+++ b/data/cards/99937011.yaml
@@ -78,6 +78,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 870249
