--- a/data/cards/45170821.yaml
+++ b/data/cards/45170821.yaml
@@ -12,7 +12,7 @@ name:
   ko: 비전 히어로 애더레이션
   ko_rr:
   zh-TW:
-  zh-CN: 幻影英雄 崇拜人
+  zh-CN: 幻影－英雄 崇高
 text:
   en: |-
     2 "HERO" monsters
@@ -40,8 +40,8 @@ text:
     ①: 1턴에 1번, 상대 필드의 앞면 표시 몬스터 1장과, 이 카드 이외의 자신 필드의 "히어로" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 상대 몬스터의 공격력 / 수비력은 턴 종료시까지, 그 자신 몬스터의 공격력만큼 내린다.
   zh-TW:
   zh-CN: |-
-    「英雄」怪兽×2
-    ①：1回合1次，以对方场上1只表侧表示怪兽和这张卡以外的自己场上1只「英雄」怪兽为对象才能发动。那只对方怪兽的攻击力·守备力直到回合结束时下降那只自己怪兽的攻击力数值。
+    "－英雄"怪兽×2
+    ①：1回合1次，以对手场上的1只表侧表示怪兽和自己场上此卡以外的1只"－英雄"怪兽为对象可以发动。该对手怪兽的攻击力・守备力直至回合结束时为止，下降相当于该自己的怪兽的攻击力的数值。
 card_type: Monster
 monster_type_line: Warrior / Fusion / Effect
 attribute: DARK
@@ -113,6 +113,11 @@ sets:
     set_name: Dimension Box Limited Edition
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: CL02-SC029
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
