--- a/data/cards/29479265.yaml
+++ b/data/cards/29479265.yaml
@@ -108,6 +108,12 @@ sets:
     - Secret Rare
     - 20th Secret Rare
     - Ultimate Rare
+  - set_number: SLF1-JP092
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: CHIM-KR045
     set_name: Chaos Impact
