--- a/data/cards/69946549.yaml
+++ b/data/cards/69946549.yaml
@@ -12,7 +12,7 @@ name:
   ko: 프레데터 플랜츠 드라고스타페리아
   ko_rr: Peuredeteo Peullaencheu Deuragoseutaperia
   zh-TW:
-  zh-CN: 捕食植物 犀角龙
+  zh-CN: 捕食植物 魔星花龙
 text:
   en: |-
     1 Fusion Monster + 1 DARK monster
@@ -41,7 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     融合怪兽＋暗属性怪兽
-    ①：1回合1次，以对方场上1只表侧表示怪兽为对象才能发动。给那只怪兽放置1个捕食指示物。有捕食指示物放置的2星以上的怪兽的等级变成1星。这个效果在对方回合也能发动。②：只要这张卡在怪兽区域存在，对方发动的有捕食指示物放置的怪兽的效果无效化。
+    ①：1回合1次，以对手场上的1只表侧表示怪兽为对象可以发动。在该怪兽上放1个捕食计数物。放有捕食计数物的等级2以上怪兽的等级变为1。此效果在对手回合中也可以发动。②：只要此卡存在于怪兽区域，对手发动的、放有捕食计数物的怪兽的效果无效化。
 card_type: Monster
 monster_type_line: Plant / Fusion / Effect
 attribute: DARK
@@ -176,6 +176,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL02-SC045
+    set_name: Classic Pack 02
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
