--- a/data/cards/79864860.yaml
+++ b/data/cards/79864860.yaml
@@ -12,7 +12,7 @@ name:
   ko: 프레데터 플랜츠 트리피오베루툼
   ko_rr: Peuredeteo Peullaencheu Teuripioberutum
   zh-TW:
-  zh-CN: 捕食植物 穗叶藤三尖狱花神
+  zh-CN: 捕食植物 三首剧毒穗叶藤龙
 text:
   en: |-
     3 DARK monsters on the field
@@ -53,10 +53,7 @@ text:
   zh-TW:
   zh-CN: |-
     场上的暗属性怪兽×3
-    这个卡名的②③的效果1回合各能使用1次。
-    ①：这张卡的攻击力上升这张卡以外的场上的有捕食指示物放置的怪兽的原本攻击力的合计数值。
-    ②：这张卡是已融合召唤的场合，对方从额外卡组把怪兽特殊召唤之际才能发动。那次特殊召唤无效，那些怪兽破坏。
-    ③：对方场上的怪兽有捕食指示物放置中的场合才能发动。这张卡从墓地守备表示特殊召唤。
+    此卡名的②③效果1回合仅可各使用1次。①：此卡的攻击力上升相当于场上此卡以外放有捕食计数物的怪兽的原本攻击力合计的数值。②：此卡是被融合召唤的情况下，对手从额外牌组特殊召唤怪兽之际可以发动。将该特殊召唤无效，将该怪兽破坏。③：对手场上的怪兽上放有捕食计数物的情况下可以发动。将此卡从墓地以守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Plant / Fusion / Effect
 attribute: DARK
@@ -122,6 +119,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: CL02-SC046
+    set_name: Classic Pack 02
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
