--- a/data/cards/18094166.yaml
+++ b/data/cards/18094166.yaml
@@ -12,7 +12,7 @@ name:
   ko: 비전 히어로 화리스
   ko_rr: Bijeon Hieoro Hwariseu
   zh-TW:
-  zh-CN: 幻影英雄 独善人
+  zh-CN: 幻影－英雄 法利斯
 text:
   en: |-
     You can discard 1 other "HERO" monster; Special Summon this card from your hand. If this card is Normal or Special Summoned: You can place 1 "Vision HERO" monster from your Deck, except "Vision HERO Faris", in your Spell & Trap Zone as a face-up Continuous Trap, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except "HERO" monsters. You can only use each effect of "Vision HERO Faris" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패에서 이 카드 이외의 "히어로" 몬스터 1장을 버리고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "비전 히어로 화리스" 이외의 "비전 히어로" 몬스터 1장을 골라, 지속 함정 카드로 취급하고 자신의 마법 & 함정 존에 앞면 표시로 놓는다. 이 효과의 발동 후, 턴 종료시까지 자신은 "히어로" 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：从手卡把这张卡以外的1只「英雄」怪兽丢弃才能发动。这张卡从手卡特殊召唤。
-    ②：这张卡召唤·特殊召唤成功的场合才能发动。从卡组选「幻影英雄 独善人」以外的1只「幻影英雄」怪兽当作永续陷阱卡使用在自己的魔法与陷阱区域表侧表示放置。这个效果的发动后，直到回合结束时自己不是「英雄」怪兽不能从额外卡组特殊召唤。
+    此卡名的①②效果1回合仅可各使用1次。①：从手牌将此卡以外的1只"－英雄"怪兽舍弃可以发动。从手牌将此卡特殊召唤。②：此卡召唤・特殊召唤成功的情况下可以发动。从牌组挑选"幻影－英雄 法利斯"以外的1只"幻影－英雄"怪兽，视为永续陷阱卡，以表侧表示放在自己的魔法与陷阱区域。此效果发动后，直至回合结束时为止自己从额外牌组仅可特殊召唤"－英雄"怪兽。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: DARK
@@ -102,6 +100,11 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC027
+    set_name: Classic Pack 02
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
