--- a/data/cards/67111213.yaml
+++ b/data/cards/67111213.yaml
@@ -12,7 +12,7 @@ name:
   ko: 리추어 어비스
   ko_rr:
   zh-TW:
-  zh-CN: 遗式深渊鲨
+  zh-CN: 咒仪・邃渊
 text:
   en: |-
     When this card is Summoned: You can add 1 "Gishki" monster with 1000 or less DEF from your Deck to your hand, except "Gishki Abyss".
@@ -32,7 +32,7 @@ text:
     이 카드가 일반 소환 / 반전 소환 / 특수 소환에 성공했을 때, 자신의 덱에서 '리추어 어비스' 이외의 수비력 1000 이하의 '리추어' 라는 이름이 붙은 몬스터 1장을 패에 넣을 수 있다.
   zh-TW:
   zh-CN: |-
-    这张卡召唤·反转召唤·特殊召唤成功时，可以从卡组把「遗式深渊鲨」以外的1只守备力1000以下的名字带有「遗式」的怪兽加入手卡。
+    ①：此卡召唤・反转召唤・特殊召唤成功时可以发动。从牌组将"咒仪・邃渊"以外的1只守备力1000以下"咒仪"怪兽加入手牌。
 card_type: Monster
 monster_type_line: Fish / Effect
 attribute: WATER
@@ -79,6 +79,11 @@ sets:
   ko:
   - set_number: HA05-KR031
     set_name: 'Hidden Arsenal 5: Steelswarm Invasion'
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: CL02-SC073
+    set_name: Classic Pack 02
     rarities:
     - Super Rare
 limit_regulation:
