--- a/data/cards/92784374.yaml
+++ b/data/cards/92784374.yaml
@@ -12,7 +12,7 @@ name:
   ko: 리추어 에리얼
   ko_rr:
   zh-TW:
-  zh-CN: 遗式术师·艾莉娅儿
+  zh-CN: 咒仪・艾莉娅儿
 text:
   en: |-
     FLIP: You can add 1 "Gishki" monster from your Deck to your hand.
@@ -32,7 +32,7 @@ text:
     리버스 : 자신의 덱에서 "리추어"라는 이름이 붙은 몬스터 1장을 패에 넣을 수 있다.
   zh-TW:
   zh-CN: |-
-    反转：可以从卡组把1只名字带有「遗式」的怪兽加入手卡。
+    ①：此卡反转的情况下可以发动。从牌组将1只"咒仪"怪兽加入手牌。
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: WATER
@@ -80,6 +80,11 @@ sets:
     set_name: 'Hidden Arsenal 5: Steelswarm Invasion'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: CL02-SC075
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
