--- a/data/cards/73551138.yaml
+++ b/data/cards/73551138.yaml
@@ -12,7 +12,7 @@ name:
   ko: 리추어 에밀리아
   ko_rr:
   zh-TW:
-  zh-CN: 遗式术师·艾米莉娅
+  zh-CN: 咒仪・艾米莉娅
 text:
   en: |-
     Cannot be Special Summoned. During the End Phase of the turn this card is Normal Summoned or flipped face-up: Return it to the hand. When this card is Normal Summoned or flipped face-up: Negate all Trap Card effects on the field, until the End Phase. You must control another face-up "Gishki" monster to activate and to resolve this effect.
@@ -31,7 +31,7 @@ text:
     이 카드는 특수 소환할 수 없다. 일반 소환 / 리버스한 턴의 엔드 페이즈시에 주인의 패로 되돌아간다. 이 카드가 일반 소환 / 리버스했을 때, 자신 필드 위에 이 카드 이외의 "리추어" 라는 이름이 붙은 몬스터가 존재할 경우, 엔드 페이즈시까지 필드 위 함정 카드의 효과를 무효로 한다.
   zh-TW:
   zh-CN: |-
-    这张卡不能特殊召唤。召唤·反转的回合的结束阶段时回到持有者手卡。这张卡召唤·反转时，自己场上有这张卡以外的名字带有「遗式」的怪兽存在的场合，直到结束阶段时场上的陷阱卡的效果无效。
+    此卡不可特殊召唤。①：此卡召唤・反转的情况下发动。直至回合结束时为止，将场上陷阱卡的效果无效。此效果在自己场上有此卡以外的"咒仪"怪兽存在的情况下才能发动和处理。②：在此卡召唤・反转的回合的结束阶段发动。将此卡放回持有者的手牌。
 card_type: Monster
 monster_type_line: Spellcaster / Spirit
 attribute: WATER
@@ -79,6 +79,11 @@ sets:
     set_name: 'Hidden Arsenal 6: Omega Xyz'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: CL02-SC080
+    set_name: Classic Pack 02
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
