--- a/data/cards/yugipedia911464.yaml
+++ b/data/cards/yugipedia911464.yaml
@@ -38,6 +38,8 @@ sets:
   - set_number: SUB1-JP006
     set_name: Secret Utility Box
     rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
