--- a/data/cards/yugipedia911465.yaml
+++ b/data/cards/yugipedia911465.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Galaxy-Eyes" card.)
-     Pay half your LP, then target 2 monsters in your GY; for the rest of this turn after this card resolves, you can only Special Summon monsters from the Extra Deck once, not counting this card's effect, also Special Summon both targeted monsters (but their effects are negated), and if you do, immediately after this effect resolves, Xyz Summon 1 "Number" monster using only those 2 monsters. You can only activate 1 "Last Hope Numbers" per turn.
+    Pay half your LP, then target 2 monsters in your GY; for the rest of this turn after this card resolves, you can only Special Summon monsters from the Extra Deck once, not counting this card's effect, also Special Summon both targeted monsters (but their effects are negated), then, immediately after this effect resolves, Xyz Summon 1 "Number" monster using only those 2 monsters. You can only activate 1 "Last Hope Numbers" per turn.
   de:
   es:
   fr:
@@ -38,6 +38,8 @@ sets:
   - set_number: SUB1-JP004
     set_name: Secret Utility Box
     rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
