--- a/data/cards/45222299.yaml
+++ b/data/cards/45222299.yaml
@@ -12,7 +12,7 @@ name:
   ko: 이비리추어 가스트크라케
   ko_rr:
   zh-TW:
-  zh-CN: 邪遗式幽风乌贼怪
+  zh-CN: 禁咒仪・幽灵克拉肯
 text:
   en: |-
     You can Ritual Summon this card with any "Gishki" Ritual Spell Card. When this card is Ritual Summoned: Look at up to 2 random cards in your opponent's hand, then shuffle 1 of them into the Deck.
@@ -31,7 +31,7 @@ text:
     "리추어"라는 이름이 붙은 의식 마법 카드에 의해 의식 소환. 이 카드가 의식 소환에 성공했을 때, 상대의 패를 무작위로 2장까지 확인하고, 그 중에서 1장을 골라 주인의 덱으로 되돌린다.
   zh-TW:
   zh-CN: |-
-    名字带有「遗式」的仪式魔法卡降临。这张卡仪式召唤成功时，把对方手卡随机最多2张确认，从那之中选1张回到持有者卡组。
+    以"咒仪"仪式魔法卡降临。①：此卡仪式召唤成功的情况下发动。随机挑选最多2张对手手牌确认，挑选其中1张放回牌组。
 card_type: Monster
 monster_type_line: Aqua / Ritual / Effect
 attribute: WATER
@@ -81,6 +81,11 @@ sets:
   ko:
   - set_number: HA06-KR046
     set_name: 'Hidden Arsenal 6: Omega Xyz'
+    rarities:
+    - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC087
+    set_name: Classic Pack 02
     rarities:
     - Secret Rare
 limit_regulation:
