--- a/data/cards/92962242.yaml
+++ b/data/cards/92962242.yaml
@@ -1,7 +1,7 @@
 konami_id: 18162
 password: 92962242
 name:
-  en: Jio the Weighted Ninja
+  en: Jio the Stacked Ninja
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal Summoned, Special Summoned, or flipped face-up: You can target up to 2 face-up monsters on the field; change them to face-down Defense Position. Opponent's monsters changed to face-down Defense Position by this effect cannot change their battle positions. If another monster(s) on the field is flipped face-up while this monster is face-up on the field (except during the Damage Step): You can target 1 card your opponent controls; destroy it. You can only use each effect of "Jio the Weighted Ninja" once per turn.
+    If this card is Normal Summoned, Special Summoned, or flipped face-up: You can target up to 2 face-up monsters on the field; change them to face-down Defense Position. Opponent's monsters changed to face-down Defense Position by this effect cannot change their battle positions. If another monster(s) on the field is flipped face-up while this monster is face-up on the field (except during the Damage Step): You can target 1 card your opponent controls; destroy it. You can only use each effect of "Jio the Stacked Ninja" once per turn.
   de:
   es:
   fr:
