--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -37,11 +37,11 @@ jobs:
           cache-dependency-path: yaml-yugi/src/requirements.txt
       - run: cd .. && curl -fsSLO https://github.com/DawnbrandBots/yaml-yugi-ko/raw/master/overrides.tsv
       - run: pip install -r src/requirements.txt
-      - name: Transform
+      - name: Transform (OCG+TCG)
         working-directory: yaml-yugi/data/cards
         run: |
           git rm --ignore-unmatch kdb*.yaml yugipedia*.yaml
-          python3 ../../src/main.py \
+          python3 ../../src/main_ocgtcg.py \
             ../../../yaml-yugipedia/wikitext/cards \
             --zh-CN ../../../yaml-yugi-zh/zh-CN \
             --assignments ../../src/assignments/assignments.yaml \
@@ -49,6 +49,13 @@ jobs:
             --ocg ../../data/limit-regulation/ocg/2022-10-01.name.json \
             --ko ../../../overrides.tsv \
             --aggregate ../../../aggregate/cards.json
+      - name: Transform (Rush Duel)
+        working-directory: yaml-yugi/data/rush
+        run: |
+          git rm --ignore-unmatch yugipedia*.yaml
+          python3 ../../src/main_rush.py \
+            ../../../yaml-yugipedia/wikitext/rush \
+            --aggregate ../../../aggregate/rush.json
       - name: Commit
         id: commit
         run: |
@@ -61,6 +68,7 @@ jobs:
       - name: Merge
         run: |
           sed -s '1i---' data/cards/*.yaml > ../aggregate/cards.yaml
+          sed -s '1i---' data/rush/*.yaml > ../aggregate/rush.yaml
       - working-directory: aggregate
         name: Commit aggregate
         run: |
@@ -79,4 +87,6 @@ jobs:
       - name: Load (push)
         env:
           OPENSEARCH_URL: ${{ secrets.OS_URL }}
-        run: yarn ts-node src/load.ts ../aggregate/cards.yaml yu-gi-oh_ocg-tcg
+        run: |
+          yarn ts-node src/load.ts ../aggregate/cards.yaml yu-gi-oh_ocg-tcg
+          yarn ts-node src/load.ts ../aggregate/rush.yaml yu-gi-oh_rush
