--- a/data/cards/yugipedia917140.yaml
+++ b/data/cards/yugipedia917140.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja:
-  ja_romaji:
+  ja: ヴィシャス＝アストラウド
+  ja_romaji: Vishasu = Asutoraudo
   ko:
   ko_rr:
   zh-TW:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     "Visas Starfrost" + 1 monster with 1500 ATK/2100 DEF
-    Must be Special Summoned by banishing the above cards from your field and/or GY. If this card is Special Summoned: You can target 1 other monster on the field; destroy it, and if you do, this card gains ATK equal to half the destroyed monster’s original ATK or DEF (whichever is higher). Cannot be destroyed by battle.
+    Must be Special Summoned (from your Extra Deck) by banishing the above cards from your field and/or GY. If this card is Special Summoned: You can target 1 other monster on the field; destroy it, and if you do, this card gains ATK equal to half the destroyed monster's original ATK or DEF (whichever is higher). Cannot be destroyed by battle.
   de:
   es:
   fr:
@@ -41,6 +41,15 @@ sets:
   - set_number: CYAC-JP036
     set_name: Cyberstorm Access
     rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Prismatic Secret Rare
+  - set_number: CYAC-JP036
+    set_name: Cyberstorm Access +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
