--- a/data/cards/yugipedia917145.yaml
+++ b/data/cards/yugipedia917145.yaml
@@ -7,15 +7,15 @@ name:
   fr:
   it:
   pt:
-  ja:
-  ja_romaji:
+  ja: クシャトリラ・アクストラ
+  ja_romaji: Kushatorira Akusutora
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    If a face-up "Kashtira" Xyz Monster(s) you control is destroyed by battle or card effect: Banish 1 "Visas Starfrost" from your hand, Deck, or field, and if you do, Special Summon 1 "Viscious Astroud" from your Extra Deck, ignoring its Summoning conditions. If this card becomes banished: You can target 1 of your banished "Visas Starfrost"; add it to your hand. You can only use each effect of "Kashtira Axtra" once per turn.
+    If a face-up "Kashtira" Xyz Monster(s) you control is destroyed by battle or card effect: Banish 1 "Visas Starfrost" from your hand, Deck, or Monster Zone, and if you do, Special Summon 1 "Vicious Astroud" from your Extra Deck, ignoring its Summoning conditions. If this card is banished: You can target 1 of your banished "Visas Starfrost"; add it to your hand. You can only use each effect of "Kashtira Axtra" once per turn.
   de:
   es:
   fr:
