--- a/rush.yaml
+++ b/rush.yaml
@@ -32339,7 +32339,7 @@ yugipedia_page_id: 808997
 ---
 konami_id: 16573
 name:
-  en: Great Imperial Dinocarriage Dynarmix [L]
+  en: Dynamic Dino Dynamix [L]
   de:
   es:
   fr:
@@ -32391,7 +32391,7 @@ series:
 - Nouveau Riche Dinosaur
 images:
 - index: 1
-  image: GreatImperialDinocarriageDynarmixL-RDMAX2-JP-UR.png
+  image: DynamicDinoDynamixL-RDMAX2-JP-UR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP005
@@ -32409,7 +32409,7 @@ yugipedia_page_id: 805878
 ---
 konami_id: 16574
 name:
-  en: Great Imperial Dinocarriage Dynarmix
+  en: Dynamic Dino Dynamix
   de:
   es:
   fr:
@@ -32423,7 +32423,7 @@ name:
   zh-CN:
 summoning_condition:
   en: |-
-    You can Maximum Summon this card together with "Great Imperial Dinocarriage Dynarmix [L]" and "Great Imperial Dinocarriage Dynarmix [R]".
+    You can Maximum Summon this card together with "Dynamic Dino Dynamix [L]" and "Dynamic Dino Dynamix [R]".
   de:
   es:
   fr:
@@ -32477,7 +32477,7 @@ series:
 maximum_atk: 3400
 images:
 - index: 1
-  image: GreatImperialDinocarriageDynarmix-RDMAX2-JP-UR.png
+  image: DynamicDinoDynamix-RDMAX2-JP-UR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP006
@@ -32495,7 +32495,7 @@ yugipedia_page_id: 805877
 ---
 konami_id: 16575
 name:
-  en: Great Imperial Dinocarriage Dynarmix [R]
+  en: Dynamic Dino Dynamix [R]
   de:
   es:
   fr:
@@ -32547,7 +32547,7 @@ series:
 - Nouveau Riche Dinosaur
 images:
 - index: 1
-  image: GreatImperialDinocarriageDynarmixR-RDMAX2-JP-UR.png
+  image: DynamicDinoDynamixR-RDMAX2-JP-UR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP007
@@ -32565,7 +32565,7 @@ yugipedia_page_id: 805879
 ---
 konami_id: 16576
 name:
-  en: Zenigebazauls
+  en: Sneezing Greedizauls
   de:
   es:
   fr:
@@ -32615,7 +32615,7 @@ series:
 - Nouveau Riche Dinosaur
 images:
 - index: 1
-  image: Zenigebazauls-RDMAX2-JP-C.png
+  image: SneezingGreedizauls-RDMAX2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP008
@@ -32931,7 +32931,7 @@ yugipedia_page_id: 808260
 ---
 konami_id: 16582
 name:
-  en: Platinumdon
+  en: Platnidon
   de:
   es:
   fr:
@@ -32967,7 +32967,7 @@ series:
 - Nouveau Riche Dinosaur
 images:
 - index: 1
-  image: Platinumdon-RDMAX2-JP-C.png
+  image: Platnidon-RDMAX2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP014
@@ -33344,7 +33344,7 @@ yugipedia_page_id: 808258
 ---
 konami_id: 16589
 name:
-  en: Seedclotron Brusseln
+  en: Seedchrotron Brusselun
   de:
   es:
   fr:
@@ -33394,7 +33394,7 @@ series:
 - Tron
 images:
 - index: 1
-  image: SeedclotronBrusseln-RDMAX2-JP-SR.png
+  image: SeedchrotronBrusselun-RDMAX2-JP-SR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP021
@@ -33857,7 +33857,7 @@ yugipedia_page_id: 810898
 ---
 konami_id: 16597
 name:
-  en: Constructor Demolition Wyrm Dracrush
+  en: Constructor Demolisher Wyrm Drake Crush
   de:
   es:
   fr:
@@ -33893,7 +33893,7 @@ series:
 - Constructor
 images:
 - index: 1
-  image: ConstructorDemolitionWyrmDracrush-RDMAX2-JP-SR.png
+  image: ConstructorDemolisherWyrmDrakeCrush-RDMAX2-JP-SR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP029
@@ -33909,7 +33909,7 @@ yugipedia_page_id: 808859
 ---
 konami_id: 16598
 name:
-  en: Snows of Blisstopia
+  en: Silvermountain of Blisstopia
   de:
   es:
   fr:
@@ -33955,7 +33955,7 @@ series:
 - Blisstopia
 images:
 - index: 1
-  image: SnowsofBlisstopia-RDSBD7-JP-C.png
+  image: SilvermountainofBlisstopia-RDSBD7-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP030
@@ -34041,7 +34041,7 @@ yugipedia_page_id: 809067
 ---
 konami_id: 16600
 name:
-  en: Constructor Return
+  en: Constructor Resurrection
   de:
   es:
   fr:
@@ -34087,7 +34087,7 @@ series:
 - Constructor
 images:
 - index: 1
-  image: ConstructorReturn-RDSBD7-JP-C.png
+  image: ConstructorResurrection-RDSBD7-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP033
@@ -34163,7 +34163,7 @@ yugipedia_page_id: 808418
 ---
 konami_id: 16602
 name:
-  en: Horn Wan Yue the Music Princess
+  en: Horn Knives the Music Princess
   de:
   es:
   fr:
@@ -34213,7 +34213,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: HornWanYuetheMusicPrincess-RDMAX2-JP-SR.png
+  image: HornKnivestheMusicPrincess-RDMAX2-JP-SR.png
 sets:
   ja:
   - set_number: RD/MAX2-JP035
@@ -34289,7 +34289,7 @@ yugipedia_page_id: 809045
 ---
 konami_id: 16604
 name:
-  en: Music Princess's Twin Squall
+  en: Music Princess's Whirling Wind
   de:
   es:
   fr:
@@ -34335,7 +34335,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: MusicPrincesssTwinSquall-RDMAX2-JP-C.png
+  image: MusicPrincesssWhirlingWind-RDMAX2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP037
@@ -34351,7 +34351,7 @@ yugipedia_page_id: 810672
 ---
 konami_id: 16605
 name:
-  en: Music Princess Secret Art - Triple Tiger
+  en: Music Princess Art - Triplet
   de:
   es:
   fr:
@@ -34397,7 +34397,7 @@ series:
 - Music Princess
 images:
 - index: 1
-  image: MusicPrincessSecretArtTripleTiger-RDMAX2-JP-C.png
+  image: MusicPrincessArtTriplet-RDMAX2-JP-C.png
 sets:
   ja:
   - set_number: RD/MAX2-JP038
@@ -59913,7 +59913,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 200 ATK until the end of this turn. Then, if a face-up Field Spell Card is not on your field, you can add 1 "Peaks of Blisstopia" or "Snows of Blisstopia" from your Graveyard to your hand.
+    This card gains 200 ATK until the end of this turn. Then, if a face-up Field Spell Card is not on your field, you can add 1 "Peaks of Blisstopia" or "Silvermountain of Blisstopia" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -61257,7 +61257,7 @@ yugipedia_page_id: 862614
 ---
 konami_id: 17545
 name:
-  en: Demolition Wyrm Roar
+  en: Demolisher Wyrm Roar
   de:
   es:
   fr:
@@ -61301,7 +61301,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: DemolitionWyrmRoar-RDKP09-JP-SR.png
+  image: DemolisherWyrmRoar-RDKP09-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP09-JP059
