--- a/data/cards/33407125.yaml
+++ b/data/cards/33407125.yaml
@@ -12,7 +12,7 @@ name:
   ko: 라뷰린스 래버린스
   ko_rr: Rabyurinseu Raebeorinseu
   zh-TW:
-  zh-CN: 白银之迷宫城-白银城
+  zh-CN: 白银的迷宫城・拉比丽斯
 text:
   en: |-
     If you activate a Set "Welcome Labrynth" Normal Trap, you can add this additional effect to that card's effect at resolution.
@@ -45,7 +45,7 @@ text:
     ②: 자신이 "라뷰린스" 카드 이외의 일반 함정 카드를 발동했을 경우에 발동할 수 있다. 자신의 패 / 묘지에서 악마족 몬스터 1장을 고르고 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②效果1回合各能使用1次。①：盖放的「ウェルカム・ラビュリンス／白银城欢迎」通常陷阱卡由自己发动的场合，可以在其效果上追加以下的效果。●选场上的1张卡破坏。②：自己发动「ラビュリンス／白银城」卡以外的通常陷阱卡的场合可以发动。从自己的手牌或墓地选1只恶魔族怪兽特殊召唤。
+    此卡名的①②效果1回合仅可各使用1次。①：自己发动被放置的"光临拉比丽斯"通常陷阱卡的情况下，可以在其效果后追加以下的效果。●挑选场上的1张卡破坏。②：自己发动"拉比丽斯"卡以外的通常陷阱卡的情况下可以发动。从自己的手牌・墓地挑选1只恶魔族怪兽特殊召唤。
 card_type: Spell
 property: Field
 series:
@@ -91,6 +91,11 @@ sets:
     - Super Rare
   ko:
   - set_number: DBTM-KR021
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: DBTM-SC021
     set_name: 'Deck Build Pack: Tactical Masters'
     rarities:
     - Super Rare
