--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -5601,7 +5601,7 @@
   ko: 웰컴 라뷰린스
   ko_rr:
   zh-TW:
-  zh-CN: 欢迎光临拉比丽斯
+  zh-CN: 光临拉比丽斯
 - en: Empowered Warrior
   de: Ermächtigte Krieger
   es: Guerrero/a Fortalecido/a
