--- a/data/cards/82224646.yaml
+++ b/data/cards/82224646.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>EM<rt>엔터메이트</rt></ruby> 오드아이즈 싱크론
   ko_rr: Enteomeiteu Odeuaijeu Singkeuron
   zh-TW:
-  zh-CN: 娱乐伙伴 异色眼同调士
+  zh-CN: 娱乐伙伴 异色眼同步士
 text:
   en: |-
     If this card, Special Summoned from the Extra Deck, is used as Synchro Material, banish it. When this card is Normal Summoned: You can target 1 Level 3 or lower "Performapal" or "Odd-Eyes" monster in your GY; Special Summon it, but it has its effects negated. Once per turn: You can target 1 card in your Pendulum Zone; Special Summon it, but it has its effects negated (if any), and if you do, immediately after this effect resolves, Synchro Summon 1 Synchro Monster using only that monster and this card.
@@ -32,7 +32,7 @@ text:
     엑스트라 덱에서 특수 소환한 이 카드는, 싱크로 소환에 사용되었을 경우에 제외된다. ①: 이 카드가 일반 소환에 성공했을 때, 자신 묘지의 레벨 3 이하의, "EM(엔터메이트)" 몬스터 또는 "오드아이즈" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. 이 효과로 특수 소환한 몬스터의 효과는 무효화된다. ②: 1턴에 1번, 자신의 펜듈럼 존의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 효과를 무효로 하여 특수 소환하고, 그 카드와 이 카드만을 소재로서 싱크로 몬스터 1장을 싱크로 소환한다.
   zh-TW:
   zh-CN: |-
-    从额外卡组特殊召唤的这张卡被同调召唤使用的场合除外。①：这张卡召唤成功时，以自己墓地的3星以下的1只「娱乐伙伴」怪兽或者「异色眼」怪兽为对象才能发动。那只怪兽特殊召唤。这个效果特殊召唤的怪兽的效果无效化。②：1回合1次，以自己的灵摆区域1张卡为对象才能发动。那张卡效果无效特殊召唤，只用那张卡和这张卡为素材把1只同调怪兽同调召唤。
+    从额外牌组特殊召唤的此卡被用于同步召唤的情况下将被除外。①：此卡召唤成功时，以自己的墓地1只等级3以下的"娱乐伙伴"怪兽或"异色眼"怪兽为对象可以发动。将该怪兽特殊召唤。以此效果特殊召唤的怪兽的效果无效化。②：1回合1次，以自己灵摆区域的1张卡为对象可以发动。将该卡的效果无效并特殊召唤，仅以该卡和此卡作为素材，将1只同步怪兽同步召唤。
 card_type: Monster
 monster_type_line: Spellcaster / Pendulum / Tuner / Effect
 attribute: DARK
@@ -59,7 +59,7 @@ pendulum_effect:
     ①: 1턴에 1번, 자신 필드의 "EM(엔터메이트)" 몬스터 또는 "오드아이즈" 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 턴에, 그 앞면 표시 몬스터를 튜너로 취급하고, 레벨은 1 이 된다.
   zh-TW:
   zh-CN: |-
-    ①：1回合1次，以自己场上1只「娱乐伙伴」怪兽或者「异色眼」怪兽为对象才能发动。这个回合，那只表侧表示怪兽当作调整使用，等级变成1星。
+    ①：1回合1次，以自己场上的1只"娱乐伙伴"怪兽或"异色眼"怪兽为对象可以发动。此回合，该表侧表示怪兽视为协调，等级变为1。
 series:
 - Odd-Eyes
 - Performapal
@@ -107,6 +107,11 @@ sets:
     set_name: Advanced Event Pack 2019 Vol.2
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: SD29-SC016
+    set_name: 'Structure Deck: Master of Pendulum'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
