--- a/data/cards/40619825.yaml
+++ b/data/cards/40619825.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as an "Archfiend" card.)
-    The equipped monster gains 1000 ATK. When this card is sent from the field to the Graveyard: You can Tribute 1 monster; place this card on the top of your Deck.
+    The equipped monster gains 1000 ATK. When this card is sent from the field to the GY: You can Tribute 1 monster; place this card on top of your Deck.
   de: |-
     (Diese Karte wird jederzeit als „Erzunterweltler“-Karte behandelt.)
     Das ausgerüstete Monster erhält 1000 ATK. Wenn diese Karte vom Spielfeld auf den Friedhof gelegt wird: Du kannst 1 Monster als Tribut anbieten; lege diese Karte auf das Deck zurück.
@@ -44,11 +44,11 @@ series:
 - Archfiend
 images:
 - index: 1
-  image: '  AxeofDespair-VS15-JP-C.png'
-  illustration: '   AxeofDespair-TF04-JP-VG.jpg'
+  image: '  AxeofDespair-LART-EN-UR-LE.png'
+  illustration: AxeofDespair-TF04-JP-VG.jpg
 - index: '1.1'
   image: AxeofDespair-YS15-EU-C-1E.png
-  illustration: AxeofDespair-TF04-EN-VG.jpg
+  illustration: ' AxeofDespair-TF04-EN-VG.jpg'
 sets:
   en:
   - set_number: SYE-035
@@ -81,6 +81,10 @@ sets:
     set_name: 'Super Starter: Space-Time Showdown'
     rarities:
     - Common
+  - set_number: LART-EN051
+    set_name: The Lost Art Promotion 2022 I
+    rarities:
+    - Ultra Rare
   - set_number: MRL-002
     set_name: Magic Ruler
     rarities:
@@ -152,6 +156,10 @@ sets:
     set_name: '2-Player Starter Deck: Yuya & Declan'
     rarities:
     - Common
+  - set_number: LART-DE051
+    set_name: The Lost Art Promotion 2022 I
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: MDM-F002
     set_name: Spell Ruler
@@ -187,6 +195,10 @@ sets:
     set_name: '2-Player Starter Deck: Yuya & Declan'
     rarities:
     - Common
+  - set_number: LART-FR051
+    set_name: The Lost Art Promotion 2022 I
+    rarities:
+    - Ultra Rare
   it:
   - set_number: SDM-I002
     set_name: Spell Ruler
@@ -222,6 +234,10 @@ sets:
     set_name: '2-Player Starter Deck: Yuya & Declan'
     rarities:
     - Common
+  - set_number: LART-IT051
+    set_name: The Lost Art Promotion 2022 I
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SYE-PT035
     set_name: 'Starter Deck: Yugi Evolution'
@@ -240,6 +256,10 @@ sets:
     set_name: '2-Player Starter Deck: Yuya & Declan'
     rarities:
     - Common
+  - set_number: LART-PT051
+    set_name: The Lost Art Promotion 2022 I
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: MR-02
     set_name: Magic Ruler (Japanese)
