--- a/data/cards/32785578.yaml
+++ b/data/cards/32785578.yaml
@@ -12,7 +12,7 @@ name:
   ko: 페어웰컴 라뷰린스
   ko_rr: Pe-eowelkeom Rabyurinseu
   zh-TW:
-  zh-CN: 白银城欢迎变欢送
+  zh-CN: 感谢光临拉比丽斯
 text:
   en: |-
     When a monster declares an attack, while you control a Fiend monster: Target 1 card on the field; negate the attack, and if you do, destroy that targeted card, then, you can Set 1 non-"Labrynth" Normal Trap from your hand or Deck.
@@ -32,7 +32,7 @@ text:
     ①: 자신 필드에 악마족 몬스터가 존재할 경우, 자신 또는 상대 몬스터의 공격 선언시에, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 공격을 무효로 하고, 대상의 카드를 파괴한다. 그 후, 패 / 덱에서 "라뷰린스" 카드 이외의 일반 함정 카드 1장을 고르고 자신 필드에 세트할 수 있다.
   zh-TW:
   zh-CN: |-
-    ①：自己场上有恶魔族怪兽存在的场合，自己或者对手的怪兽的攻击宣言时，可以以场上的1张卡为对象发动。使那个攻击无效，将对象卡破坏。那之后，可以从手牌或卡组选1张「ラビュリンス／白银城」卡以外的通常陷阱卡盖放到自己的场上。
+    ①：自己场上有恶魔族怪兽存在的情况下，在自己或对手的怪兽攻击宣言时，以场上的1张卡为对象可以发动。使该攻击无效，破坏对象的卡。然后，可以从手牌・牌组挑选1张"拉比丽斯"卡以外的通常陷阱卡放置在自己场上。
 card_type: Trap
 property: Normal
 series:
@@ -79,6 +79,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: DBTM-SC024
+    set_name: 'Deck Build Pack: Tactical Masters'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
