--- a/data/cards/85497611.yaml
+++ b/data/cards/85497611.yaml
@@ -12,7 +12,7 @@ name:
   ko: 오드아이즈 위저드 드래곤
   ko_rr: Odeuaijeu Wijeodeu Deuraegon
   zh-TW:
-  zh-CN: 异色眼魔导龙
+  zh-CN: 异色眼巫师龙
 text:
   en: |-
     If this card is in your hand: You can Tribute 1 DARK monster; send 1 "Odd-Eyes Dragon" from your hand, Deck, or face-up field to the GY, and if you do, Special Summon this card. If this card in your possession is destroyed by an opponent's card and sent to your GY: You can Special Summon 1 "Odd-Eyes" monster from your Deck or GY, except "Odd-Eyes Wizard Dragon", then you can add 1 "Spiral Flame Strike" from your Deck to your hand.
@@ -32,8 +32,7 @@ text:
     ①: 이 카드가 패에 있을 경우, 자신 필드의 어둠 속성 몬스터 1장을 릴리스하고 발동할 수 있다. 패 / 덱 및 자신 필드의 앞면 표시 몬스터 중에서, "오드아이즈 드래곤" 1장을 골라 묘지로 보내고, 이 카드를 특수 소환한다. ②: 이 카드가 상대에 의해 파괴되어 묘지로 보내졌을 경우에 발동할 수 있다. 자신의 덱 / 묘지에서 "오드아이즈 위저드 드래곤" 이외의 "오드아이즈" 몬스터 1장을 골라 특수 소환한다. 그 후, 덱에서 "나선의 스트라이크버스트" 1장을 패에 넣을 수 있다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡在手卡的场合，把自己场上1只暗属性怪兽解放才能发动。从手卡·卡组以及自己场上的表侧表示怪兽之中选1只「异色眼龙」送去墓地，这张卡特殊召唤。
-    ②：这张卡被对方破坏送去墓地的场合才能发动。从自己的卡组·墓地选「异色眼魔导龙」以外的1只「异色眼」怪兽特殊召唤。那之后，可以从卡组把1张「螺旋之强袭炸裂」加入手卡。
+    ①：此卡在手牌的情况下，解放自己场上的1只暗属性怪兽可以发动。从手牌・牌组及自己场上的表侧表示怪兽中挑选1只"异色眼龙"送至墓地，将此卡特殊召唤。②：此卡被对手破坏并被送至墓地的情况下可以发动。从自己牌组・墓地挑选"异色眼巫师龙"以外的1只"异色眼"怪兽特殊召唤。然后，可从牌组将1张"螺旋之强袭爆裂"加入手牌。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: DARK
@@ -101,6 +100,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 6'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: SD29-SC013
+    set_name: 'Structure Deck: Master of Pendulum'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
